<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singup_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginRight="35dp"
    android:layout_marginLeft="35dp"
    android:layout_marginBottom="20dp"
    card_view:cardCornerRadius="20dp"
    tools:context=".presentation.ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sing_up"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/segoeui_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryTextColor"
            android:textSize="11sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:backgroundTint="@color/primaryTextColor"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primaryTextColor"
            android:textSize="11sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/primaryTextColor"
            android:textColor="@color/primaryTextColor"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/primaryTextColor"
            android:textSize="11sp"/>

        <com.example.dicodingstory.util.PasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/primaryTextColor"
            android:textColor="@color/primaryTextColor"/>

        <Button
            android:id="@+id/cirLoginButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/login_button_bk"
            android:text="@string/sing_up"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tv_singUp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="11sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account_login"/>



    </LinearLayout>


</androidx.cardview.widget.CardView>